# agentshield

./: LICENSE  README.md
agentshield/: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  SECURITY.md  pyproject.toml
agentshield/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
agentshield/.github/workflows/: ci.yml
agentshield/agentshield/: __init__.py
agentshield/agentshield/alerting/: pagerduty.py  slack.py  webhook.py
agentshield/agentshield/audit/: __init__.py  exporters.py  logger.py  storage.py
agentshield/agentshield/cli/: main.py  query.py  validate.py
agentshield/agentshield/core/: __init__.py  decision.py  interceptor.py  policy.py  session.py
agentshield/agentshield/detectors/: __init__.py  base.py  command_injection.py  data_exfiltration.py  pii_scanner.py  prompt_injection.py  tool_poisoning.py
agentshield/agentshield/integrations/: __init__.py  crewai.py  langchain.py  mcp.py  openai_funcs.py
agentshield/docs/: architecture.md  detectors.md  policy-reference.md
agentshield/examples/: crewai_agent.py  custom_detector.py  langchain_agent.py  mcp_server_protection.py  quickstart.py
agentshield/policies/: default.yaml  development.yaml  strict.yaml
agentshield/policies/examples/: allow-only-read.yaml  block-pii.yaml  rate-limited.yaml
agentshield/tests/unit/: test_command_injection.py  test_data_exfiltration.py  test_interceptor.py  test_pii_scanner.py  test_policy.py  test_prompt_injection.py  test_session.py
